--- a/client/src/pages/model/model.css
+++ b/client/src/pages/model/model.css
@@ -21,3 +21,42 @@
     rgba(252, 69, 226, 0.07326680672268904) 100%
   );
 }
+
+.outModelCss {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 500px;
+  width: 380px;
+  background-color: #d9e4f5;
+  background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);
+  padding: 4;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+.audioCallingCard {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 500px;
+  width: 380px;
+  background-color: #3b3b3b;
+  border-radius: 5px;
+  padding: 4;
+}
+
+.videoCallingCard {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 500px;
+  width: 380px;
+  background-color: #d9e4f5;
+  background-image: #525252;
+  border-radius: 5px;
+  padding: 4;
+}
